Refactor MerchantOffer to use List instead of ArrayList and update completePurchase for improved clarity and functionality